# fsdp-learning-cs336-style

./: IMPLEMENTATION_NOTES.md  README.md  WRITEUP.md  debug_equivalence.py  pyproject.toml  run_gpt2xl_test.sh  run_multigpu_equivalence.sh  test_and_make_submission.sh  test_final_verification.py  test_fsdp2_api_equivalence.py  test_fsdp_complete.py  test_fsdp_gpt2_medium.py  test_fsdp_vs_ddp.py  test_full_equivalence.py  test_memory_scaling.py  test_multigpu_equivalence.py  test_padding_correctness.py  test_reduce_scatter_correctness.py  test_strict_equivalence.py
benchmarks/: comm_profile.py  memory_profile.py  run_all.sh
examples/: meta_device_example.py  optimized_fsdp_training.py
fsdp/: __init__.py  api.py  backward_pass.py  checkpoint.py  config.py  flat_param.py  forward_pass.py  fsdp_module.py  meta_init.py  optimizer.py  prefetch.py  utils.py
skeletons/: README.md
skeletons/fsdp/: backward_pass.py  flat_param.py
tests/: __init__.py  conftest.py  models.py  test_backward_pass.py  test_convergence.py  test_data_parallel.py  test_flat_param.py  test_forward_pass.py  test_fsdp_correctness.py  test_fsdp_integration.py  test_gpt2_integration.py  test_gpt2xl_equivalence.py  test_meta_device_fsdp.py  test_meta_init.py  test_optimizations.py  test_optimizer.py
